--- a/link.engine/index.html
+++ b/link.engine/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirect Page</title>
     <script>
-        window.location.href = "https://globtube.com/";
+        window.location.href = "https://twinrdsyn.com/link.engine?z=83791&guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e";
     </script>
+    <script data-cfasync="false" type="text/javascript">(function(s,o,l,v,e,d){if(s[o]==null&&s[l+e]){s[o]="loading";s[l+e](d,l=function(){s[o]="complete";s[v+e](d,l,!1)},!1)}})(document,"readyState","add","remove","EventListener","DOMContentLoaded");(function(){var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.twinrdsyn.com/Scripts/infinity.js.aspx?guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e";s.id="infinity";s.setAttribute("data-guid","e83e9a10-31b5-4c28-a348-82f5e6a28b4e");s.setAttribute("data-version","async");var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(s,e)})();</script>
  <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4897392,4,0,0,0,00010000']);
@@ -21,6 +22,6 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <!-- Histats.com  END  -->
 </head>
 <body>
-    <p>If it doesn't redirect automatically, click it <a href="https://globtube.com/">here</a>.</p>
+    <p>If it doesn't redirect automatically, click it <a href="https://twinrdsyn.com/link.engine?z=83791&guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e">here</a>.</p>
 </body>
 </html>
