--- a/link.engine/index.html
+++ b/link.engine/index.html
@@ -3,25 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect Page</title>
+    <title>Redirecting...</title>
     <script>
-        window.location.href = "https://twinrdsyn.com/link.engine?z=83791&guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e";
+        function isWebView() {
+            // Cek apakah user agent menunjukkan bahwa ini adalah WebView
+            var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+            // Cek beberapa user agent yang umum untuk WebView
+            return (
+                userAgent.includes("wv") || // Android WebView
+                (userAgent.includes("Chrome") && userAgent.includes("Mobile") && !userAgent.includes("Chrome/")) || // iOS WebView
+                (userAgent.includes("Safari") && userAgent.includes("iPhone")) // iOS WebView
+            );
+        }
+
+        // Fungsi untuk menangani redirect
+        function redirectWithKeyword() {
+            if (isWebView()) {
+                // Jika mendeteksi WebView, tampilkan pesan atau redirect ke halaman lain
+                document.body.innerHTML = "<h1>Access Denied</h1><p>This page cannot be accessed via WebView.</p>";
+                return; // Hentikan eksekusi lebih lanjut
+            }
+
+            // Ambil URL saat ini
+            var currentUrl = new URL(window.location.href);
+
+            // Ambil nilai dari parameter "kw" atau gunakan nilai default
+            var keyword = currentUrl.searchParams.get("kw") || "defaultKeyword"; // Ganti dengan kata kunci default jika tidak ada
+
+            // Bangun URL tujuan dengan kata kunci
+            var redirectUrl = "https://twinrdsyn.com/link.engine?z=83791&guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e&kw=" + encodeURIComponent(keyword);
+
+            // Lakukan redirect
+            window.location.href = redirectUrl;
+        }
+
+        // Panggil fungsi redirect setelah halaman dimuat
+        window.onload = redirectWithKeyword;
     </script>
-    <script data-cfasync="false" type="text/javascript">(function(s,o,l,v,e,d){if(s[o]==null&&s[l+e]){s[o]="loading";s[l+e](d,l=function(){s[o]="complete";s[v+e](d,l,!1)},!1)}})(document,"readyState","add","remove","EventListener","DOMContentLoaded");(function(){var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.twinrdsyn.com/Scripts/infinity.js.aspx?guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e";s.id="infinity";s.setAttribute("data-guid","e83e9a10-31b5-4c28-a348-82f5e6a28b4e");s.setAttribute("data-version","async");var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(s,e)})();</script>
- <!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4897392,4,0,0,0,00010000']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4897392&101" alt="" border="0"></a></noscript>
-<!-- Histats.com  END  -->
 </head>
 <body>
-    <p>If it doesn't redirect automatically, click it <a href="https://twinrdsyn.com/link.engine?z=83791&guid=e83e9a10-31b5-4c28-a348-82f5e6a28b4e">here</a>.</p>
+    <h1>Redirecting...</h1>
+    <p>Redirecting you to the destination with the keyword, please wait...</p>
 </body>
 </html>
